tests/string_literal_invalid_unicode_range.stderr
tests/string_literal_invalid_unicode_range.hop:2:12: error: HOP1010: invalid Unicode code point in string literal
