tests/string_literal_invalid_unicode_range.hop
// Verifies string literal invalid unicode range.
const x = "\U00110000"
